fix: move will-change to existing .story-details and add story-details.visible, story-details.hidden

--- a/styles/app.css
+++ b/styles/app.css
@@ -230,6 +230,7 @@ main.loading {
   opacity: 0;
   position: fixed;
   top: 0;
+  /* these below are pushing all page to left or right*/
   left: 100%;
   width: 100%;
   height: 100%;
@@ -240,13 +241,21 @@ main.loading {
       0px 2px 5px 0px rgba(0, 0, 0, 0.08),
       0px 2px 7px 0px rgba(0, 0, 0, 0.10);
 
-  overflow: hidden;
+  /*overflow: hidden;
   transition: opacity 0.3s ease-out;
-}
-
-.story-details * {
+  */
+  transition: transform 0,3s;
   will-change: transform;
   transform: translateZ(0);
+
+}
+
+.story-details.visible {
+  transform: translateX(-100vw);
+}
+
+.story-details.hidden {
+  transform: translateX(0);
 }
 
 .story-details__content {
